Overflow bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1024,6 +1024,7 @@ button:hover {
   background-color: black;
   margin-top: 25px;
   width: 45%;
+  overflow: hidden;
   float: left;
 }
 
